<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY app_name "Spent">]>

<resources>
    <!-- Main application resources. -->
    <string name="app_name">&app_name;</string>
    <string name="notification_listener_service">Notification Listener Service</string>
    <string name="notification_listener_service_explanation">The notification listener service must be enabled to begin recording payments on this device.</string>
    <string name="location_permission_title">Enable location access</string>
    <string name="location_permission_message">&app_name; needs access to your location to record where a payment was made</string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="location_permission_denied">Location permission denied, transactions won\'t record the location until you grant access</string>

    <!-- Navigation strings. -->
    <string name="tab_transactions">Transactions</string>
    <string name="tab_breakdown">Breakdown</string>
    <string name="tab_category_breakdown">Category</string>

    <!-- Resources for Transaction Detail view and editing. -->
    <string name="date">Date</string>
    <string name="date_error">Please select a date using the date and time selectors</string>
    <string name="date_hint">@string/date</string>
    <string name="amount">Amount</string>
    <string name="amount_error">Please enter a transaction amount</string>
    <string name="amount_hint">@string/amount</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="description">Description</string>
    <string name="description_error">Please enter a description for the transaction</string>
    <string name="description_hint">Recipient</string>
    <string name="category">Category</string>
    <string name="category_breakdown_instructions">Choose a category to view the individual breakdown</string>
    <string name="category_breakdown_no_transactions_for_category">There are no Transactions recorded under this category, try selecting a different category</string>
    <string name="category_breakdown_no_transactions_for_category_filtered">There are no Transactions recorded under this category in the current date range, select a different category or try modifying the date range</string>
    <string name="category_error">Please select a category for the transaction</string>
    <string name="category_hint">@string/category</string>
    <string name="category_other">Other</string>
    <string name="category_other_hint">Custom Category</string>
    <string name="category_other_error">Please enter a custom category for the transaction</string>
    <string name="category_selected">\$%1$.2f spent on %2$s</string>
    <string name="category_unknown">Unknown</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="editing_locked_warning">Please click the Edit action button to edit this transaction</string>
    <string name="editing_in_progress">Editing enabled. Click "Save" to save changes</string>
    <string name="changes_saved">Changes to transaction have been saved</string>
    <string name="delete">Delete</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="delete_transaction_message">This will delete this record, are you sure you wish to continue?</string>
    <string name="delete_transaction_success_message">Transaction \"%1$s\" was deleted</string>
    <string name="location">Location</string>
    <string name="no_transactions_category_breakdown">Individual transaction category breakdowns will be visible here after transactions have been recorded</string>
    <string name="total">Total</string>
    <string name="undo">UNDO</string>
    <string-array name="default_categories">
        <item>Bills</item>
        <item>Charity/Donations</item>
        <item>Electricity</item>
        <item>Entertainment</item>
        <item>Fuel</item>
        <item>Groceries</item>
        <item>Health/Medicine</item>
        <item>Insurance</item>
        <item>Internet</item>
        <item>Meals</item>
        <item>Mortgage</item>
        <item>Personal</item>
        <item>Phone</item>
        <item>Public Transport</item>
        <item>Rent</item>
        <item>Water</item>
    </string-array>

    <!-- Strings related to Settings and the OptionsMenu. -->
    <string name="menu_settings">Settings</string>
    <string name="menu_date_filter">Filter Transactions</string>
    <string name="menu_date_filter_edit">Edit Filter</string>
    <string name="menu_clear_date_filter">Remove Filter</string>
    <!-- Transaction settings. -->
    <string name="date_from">From</string>
    <string name="date_to">To</string>
    <string name="pref_category_match_transactions">Transaction Matching</string>

    <!-- Settings keys. -->
    <string name="pref_match_category_key">match_category</string>
    <string name="pref_dismiss_notification_key">dismiss_notification</string>

    <!-- Settings titles. -->
    <string name="pref_match_category_title">Match transaction categories</string>
    <string name="pref_dismiss_notification_title">Dismiss notification after capture</string>

    <!-- Settings summaries. -->
    <string name="pref_match_category_summary">Try and match transaction categories automatically?</string>
    <string name="pref_dismiss_notification_summary">Note, the notification will likely be dismissed before you can see it, making it difficult to confirm the transaction details were captured correctly.</string>
</resources>
