<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ulternate.paycat.activities.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/transactionHeader"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:background="@color/colorPrimary"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:maxHeight="112dp">

        <TextView
            android:id="@+id/transactionDetailsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:labelFor="@+id/transactionDescription"
            android:text="@string/transaction_details"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/amountImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/amount_hint"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/transactionAmountLayout"
        app:srcCompat="@drawable/ic_dollar_black_24dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/transactionAmountLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/amountImage"
        app:layout_constraintTop_toBottomOf="@+id/transactionHeader">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/transactionAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_hint"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/descriptionImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/description_hint"
        android:scaleType="centerInside"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/transactionDescriptionLayout"
        app:srcCompat="@drawable/ic_send_black_24dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/transactionDescriptionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/descriptionImage"
        app:layout_constraintTop_toBottomOf="@+id/transactionAmountLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/transactionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:inputType="none"
            android:maxLines="4"
            android:minLines="1"
            android:singleLine="false"
            android:textColor="@color/colorTextDark"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/dateImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/date"
        android:scaleType="centerInside"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionDescriptionLayout"
        app:srcCompat="@drawable/ic_event_black_24dp"/>

    <TextView
        android:id="@+id/transactionDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:focusable="false"
        android:inputType="none"
        android:textAlignment="viewStart"
        android:textColor="@color/colorTextDark"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateImage"
        app:layout_constraintTop_toTopOf="@+id/dateImage"/>

    <TextView
        android:id="@+id/transactionCategoryLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:labelFor="@+id/transactionCategoryOther"
        android:text="@string/category"
        android:textAlignment="viewStart"
        android:textColor="@color/colorTextDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateImage"/>

    <Spinner
        android:id="@+id/transactionCategorySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:entries="@array/default_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionCategoryLabel"
        tools:clickable="false"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/transactionCategoryOtherLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionCategorySpinner">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/transactionCategoryOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/other_hint"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@color/colorTextDark"
            android:textSize="14sp"/>
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
